sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:3: error: not found: value dbt
  dbt=0
  ^AlgCocktailSort2:4: error: not found: value fin
  fin=getNombreValeurs()-2
  ^AlgCocktailSort2:7: error: not found: value dbt
      for (i <- dbt to fin){
                ^AlgCocktailSort2:7: error: not found: value fin
      for (i <- dbt to fin){
                       ^AlgCocktailSort2:13: error: not found: value nbchangt
    for (i <- nbchangt  to 0 by -1){
              ^AlgCocktailSort2:19: error: not found: value nbchangt
    nbchangt-=1
    ^